test/files/pos/t2433/B.java
class B223 {
    static class Inner {}
    void m(A223.Inner x) {}
}