test/files/neg/t8376/J.java
class J {
  public static void m(String... a) { }
  public static void m(J... a) { }
}
